加快消失速度、隐藏上传图片确认和取消的界面，同时出现车的数量改为1

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 		<span class="count-down-span" id="countDownSpan">3</span>
 	</div>
 	<div class="page5_bottom_tips" id="page5BottomTips">
-		<div class="button-area" id="buttonArea">
+		<!-- <div class="button-area" id="buttonArea">
 			<div class="btn" id="btnOk">
 				<img src="image/p6/btn-1.png" width="100%">
 			</div>
 			<div class="btn" id="btnCancel">
 				<img src="image/p6/btn-2.png" width="100%">
 			</div>
-		</div>
+		</div> -->
 		<div class="tips-start-text" id="tipsStartText">
 			十二生肖将在<span id="countDownTips">3</span>秒后出现<br/>请猛戳屏幕，进行抓捕！！
 		</div>
