--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 		</div>
 	</div>
 </section>
+<script src="//cdn.bootcss.com/EaselJS/0.8.0/easeljs.min.js" charset="utf-8"></script>
+<script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </body>
