修改苹果手机照片上传后，旋转的问题。

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </section>
 
 <section class="page-5">
-	<canvas id="bgCanvas"></canvas>
+	<img src="" alt="" id="myImage">
+	<canvas id="bgCanvas" class="game-canvas"></canvas>
 	<div class="count-down" id="floatCountDown">
 		<img src="image/p7/numberBG.png" width="100%">
 		<span class="count-down-span" id="countDownSpan">3</span>
@@ -69,8 +70,9 @@
 		</div>
 	</div>
 </section>
-<script src="//cdn.bootcss.com/EaselJS/0.8.0/easeljs.min.js" charset="utf-8"></script>
+<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
+<script src="js/exif.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </body>
